user interface design

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <label for="includeSymbols">include symbols</label>
             <input type="checkbox" id="includeSymbols">
         </div>
-        <button type="button" onclick="generatePassword()">Generate</button>
+        <button type="button" onclick="passwordGenerator()">Generate</button>
         <p id="result"></p>
 
     </div>
